# odd

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  README.rst  pyproject.toml  tox.ini
odd/: __init__.py  addon.py  artifact.py  const.py  db_utils.py  issue.py  main.py  parso_utils.py  typedefs.py  utils.py  xmlutils.py  yaml_utils.py
odd/check/: __init__.py  addon_file_emitter.py  attribute_override.py  base.py  button_classes.py  csv_row_emitter.py  data_element_parent.py  data_file_inclusion.py  duplicate_record_fields.py  duplicate_view_fields.py  external_id_emitter.py  field_attr_string_redundant.py  field_attrs.py  ir_cron_state_code.py  ir_model_access.py  legacy_import.py  manifest_filename.py  manifest_keys.py  missing_dependency.py  new_model_description.py  new_model_no_ir_model_access.py  noupdate.py  path_emitter.py  permissions.py  python_emitter.py  redundant_t_attf.py  relaxng.py  relaxng_view.py  route_kwargs.py  search_string.py  track_visibility_always.py  tree_attrs.py  tree_string.py  unittest_testcase_tagged.py  xml_eval.py  xml_operation_no_id.py  xml_tree_emitter.py
odd/checks/: __init__.py
odd/checks/addon/: __init__.py  data_file_inclusion.py  ir_model_access.py  manifest_filename.py
odd/checks/path/: __init__.py  permissions.py
odd/checks/python/: __init__.py  field_attr_string_redundant.py  field_attrs.py  manifest_keys.py  new_model_description.py  route_kwargs.py  track_visibility_always.py  unittest_testcase_tagged.py
odd/checks/xml/: __init__.py  attribute_override.py  button_classes.py  duplicate_record_fields.py  duplicate_view_fields.py  ir_cron_state_code.py  noupdate.py  redundant_t_attf.py  search_string.py  tree_string.py
odd/data/: addon_db.backup  addon_db.sqlite
odin/: __init__.py  addon.py  const.py  issue.py  main.py  parso_utils.py  typedefs.py  utils.py  xmlutils.py
odin/checks/: __init__.py
odin/checks/addon/: __init__.py  button_classes.py  data_file_inclusion.py  field_attrs.py  ir_model_access.py  manifest_filename.py  manifest_keys.py  permissions.py  route_kwargs.py  track_visibility_always.py
odin/checks/path/: permissions.py
odin/checks/python/: __init__.py  field_attr_string_redundant.py  field_attrs.py  manifest_keys.py  new_model_description.py  route_kwargs.py  track_visibility_always.py
odin/checks/xml/: __init__.py  attribute_override.py  attrs.py  button_classes.py  duplicate_record_fields.py  duplicate_view_fields.py  ir_cron_state_code.py  noupdate.py  redundant_t_attf.py  search_string.py  tree_string.py
tests/: common.py  test_addon.py  test_main.py  test_parso_utils.py  test_utils.py  test_xml_utils.py  test_xmlutils.py
tests/data/addon/addon_qweb/: __manifest__.py
tests/data/addon/addon_qweb_glob/: __manifest__.py
tests/data/attribute_override/add_in_odoo/: __manifest__.py
tests/data/attribute_override/in_odoo/: __manifest__.py
tests/data/attribute_override/in_odoo_data/: __manifest__.py
tests/data/attribute_override/in_openerp_data/: __openerp__.py
tests/data/attribute_override/remove_in_odoo/: __manifest__.py
tests/data/button_classes/deprecated_class/: __manifest__.py
tests/data/button_classes/deprecated_class_xml_not_included/: __manifest__.py
tests/data/button_classes/no_arch/: __manifest__.py
tests/data/button_classes/views/: foo.xml
tests/data/csv_row_emitter/simple_addon/: __manifest__.py  foo.csv
tests/data/data_element_parent/bare/: __manifest__.py
tests/data/data_file_inclusion/qweb/: __manifest__.py
tests/data/data_file_inclusion/xml_not_included/: __manifest__.py
tests/data/directory_permissions/: __manifest__.py
tests/data/duplicate_record_fields/duplicated_field/: __manifest__.py
tests/data/duplicate_record_fields/embedded_view/: __manifest__.py
tests/data/duplicate_record_fields/view_inherit/: __manifest__.py
tests/data/duplicate_view_fields/arch_override/: __manifest__.py
tests/data/duplicate_view_fields/arch_two_children/: __manifest__.py
tests/data/duplicate_view_fields/duplicate_inside_view/: __manifest__.py
tests/data/duplicate_view_fields/embedded_view_duplicate/: __manifest__.py
tests/data/duplicate_view_fields/embedded_view_no_duplicate/: __manifest__.py
tests/data/duplicate_view_fields/kanban_with_templates_no_duplicates/: __manifest__.py
tests/data/manifest_filename/: __openerp__.py
tests/data/manifest_keys/: __manifest__.py
tests/data/manifest_keys_active/: __manifest__.py
tests/data/manifest_keys_deprecated_xml_init_xml/: __manifest__.py
tests/data/manifest_keys_deprecated_xml_init_xml_csv/: __manifest__.py
tests/data/manifest_keys_unknown_keys/: __manifest__.py
tests/data/parso_utils/: django_fields.py  django_fields_2.py  full_import_path.py  model_multi_base_class.py  simple_abstract_model.py  simple_model.py  simple_model_one_field_direct_import.py  simple_model_with_field.py  simple_model_with_field_one_kwarg.py  simple_model_with_field_one_kwarg_multiline_string.py  simple_model_with_field_one_kwarg_unknown_value.py  simple_transient_model.py  some_other_field_class.py  some_other_field_class_2.py  unknown_model_class.py
tests/emitter/: test_csv_row_emitter.py  test_field_definition_emitter.py  test_model_definition_emitter.py
tests/test_checks/: test_attribute_override.py  test_button_classes.py  test_data_element_parent.py  test_data_file_inclusion.py  test_directory_permissions.py  test_duplicate_record_fields.py  test_duplicate_view_fields.py  test_field_attr_string_redundant.py  test_field_attrs.py  test_file_permissions.py  test_ir_cron_state_code.py  test_ir_model_access.py  test_legacy_import.py  test_manifest_filename.py  test_manifest_keys.py  test_missing_dependency.py  test_new_model_no_description.py  test_new_model_no_ir_model_access.py  test_noupdate.py  test_redundant_t_attf.py  test_relaxng.py  test_relaxng_view.py  test_route_kwargs.py  test_search_string.py  test_track_visibility_always.py  test_tree_attrs.py  test_tree_string.py  test_unittest_testcase_tagged.py  test_xml_eval.py  test_xml_operation_no_id.py
(+253 files in other folders)
