[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "odd"
author = "Naglis Jonaitis"
author-email = "naglis@mailbox.org"
home-page = "https://naglis.me/"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
requires = [
    "lxml==4.4.0",
    "defusedxml==0.6.0",
    "yarl==1.3.0",
    "parso==0.5.1",
]
requires-python="~=3.7"
description-file="README.rst"

[tool.flit.metadata.requires-extra]
test = [
    "pytest-cov==2.7.1",
    "flake8==3.7.8",
    "flake8-comprehensions==2.1.0",
    "mypy==0.720",
]
dev = [
    "pre-commit==1.17.0",
]

[tool.flit.scripts]
odd = "odd.main:main"

[tool.flit.entrypoints."odd.check"]
attribute_override = "odd.checks.xml:AttributeOverride"
button_classes = "odd.checks.xml:ButtonClasses"
data_file_inclusion = "odd.checks.addon:DataFileInclusion"
directory_permissions = "odd.checks.path:DirectoryPermissions"
duplicate_record_fields = "odd.checks.xml:DuplicateRecordFields"
duplicate_view_fields = "odd.checks.xml:DuplicateViewFields"
field_attr_string_redundant = "odd.checks.python:FieldAttrStringRedundant"
field_attrs = "odd.checks.python:FieldAttrs"
file_permissions = "odd.checks.path:FilePermissions"
ir_cron_state_code = "odd.checks.xml:IrCronStateCode"
ir_model_access_no_group = "odd.checks.addon:IrModelAccessNoGroup"
manifest_filename = "odd.checks.addon:ManifestFilename"
manifest_keys = "odd.checks.python:ManifestKeys"
new_model_description = "odd.checks.python:NewModelDescription"
noupdate = "odd.checks.xml:NoUpdate"
redundant_t_attf = "odd.checks.xml:RedundantTAttf"
route_kwargs = "odd.checks.python:RouteKwargs"
search_string = "odd.checks.xml:SearchString"
track_visibility_always = "odd.checks.python:TrackVisibilityAlways"
tree_string = "odd.checks.xml:TreeString"
