[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "odd"
author = "Naglis Jonaitis"
author-email = "naglis@mailbox.org"
home-page = "https://naglis.me/"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Framework :: Odoo",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License"
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
requires = [
    "lxml==4.4.0",
    "defusedxml==0.6.0",
    "yarl==1.3.0",
    "parso==0.5.1",
]
requires-python="~=3.7"
description-file="README.rst"

[tool.flit.metadata.requires-extra]
test = [
    "pytest-cov==2.7.1",
    "flake8==3.7.8",
    "flake8-comprehensions==2.1.0",
    "mypy==0.720",
]
dev = [
    "pre-commit==1.17.0",
]

[tool.flit.scripts]
odd = "odd.main:main"

[tool.flit.entrypoints."odd.check"]
attribute_override = "odd.check:AttributeOverride"
button_classes = "odd.check:ButtonClasses"
data_file_inclusion = "odd.check:DataFileInclusion"
directory_permissions = "odd.check:DirectoryPermissions"
duplicate_record_fields = "odd.check:DuplicateRecordFields"
duplicate_view_fields = "odd.check:DuplicateViewFields"
field_attr_string_redundant = "odd.check:FieldAttrStringRedundant"
field_attrs = "odd.check:FieldAttrs"
file_permissions = "odd.check:FilePermissions"
ir_cron_state_code = "odd.check:IrCronStateCode"
ir_model_access_no_group = "odd.check:IrModelAccessNoGroup"
legacy_import = "odd.check:LegacyImport"
manifest_filename = "odd.check:ManifestFilename"
manifest_keys = "odd.check:ManifestKeys"
new_model_description = "odd.check:NewModelDescription"
new_model_no_ir_model_access = "odd.check:NewModelNoIrModelAccess"
noupdate = "odd.check:NoUpdate"
redundant_t_attf = "odd.check:RedundantTAttf"
route_kwargs = "odd.check:RouteKwargs"
search_string = "odd.check:SearchString"
track_visibility_always = "odd.check:TrackVisibilityAlways"
tree_string = "odd.check:TreeString"
unittest_testcase_tagged = "odd.check:UnitTestTestCaseTagged"