[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "odd"
version = "0.0.1a1"
description = "odd, the Odoo linter"
license = "Apache-2.0"
authors = ["Naglis Jonaitis <naglis@mailbox.org>"]
readme = "README.rst"
homepage = "https://naglis.me/"
repository = "https://gitlab.com/naglis/odd"
keywords = ["Odoo", "static code analysis", "linter"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Framework :: Odoo",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "~=3.7"
lxml = "==4.4.0"
defusedxml = "==0.6.0"
yarl = "==1.3.0"
parso = "==0.5.1"

[tool.poetry.dev-dependencies]
pytest-cov = "==2.7.1"
flake8 = "==3.7.8"
flake8-comprehensions = "==2.1.0"
mypy = "==0.720"
pre-commit = "==1.17.0"
bandit = "^1.6"

[tool.poetry.scripts]
odd = "odd.main:main"

[tool.poetry.plugins."odd.artifact_type"]
addon = "odd.addon:Addon"
addon_path = "odd.check.path_emitter:AddonPath"
data_file = "odd.check.addon_file_emitter:DataFile"
demo_file = "odd.check.addon_file_emitter:DemoFile"
xml_tree = "odd.check.xml_tree_emitter:XMLTree"
xml_record = "odd.check.xml_tree_emitter:XMLRecord"
python_module = "odd.check.python_emitter:PythonModule"
external_id = "odd.check.external_id_emitter:ExternalID"
external_id_reference = "odd.check.external_id_emitter:ExternalIDReference"
csv_row = "odd.check.csv_row_emitter:CSVRow"

[tool.poetry.plugins."odd.check"]
addon_path_emitter = "odd.check.path_emitter:AddonPathEmitter"
addon_file_emitter = "odd.check.addon_file_emitter:AddonFileEmitter"
xml_tree_emitter = "odd.check.xml_tree_emitter:XMLTreeEmitter"
python_emitter = "odd.check.python_emitter:PythonEmitter"
external_id_emitter = "odd.check.external_id_emitter:ExternalIDEmitter"
csv_row_emitter = "odd.check.csv_row_emitter:CSVRowEmitter"

attribute_override = "odd.check:AttributeOverride"
button_classes = "odd.check:ButtonClasses"
data_file_inclusion = "odd.check:DataFileInclusion"
directory_permissions = "odd.check:DirectoryPermissions"
duplicate_record_fields = "odd.check:DuplicateRecordFields"
duplicate_view_fields = "odd.check:DuplicateViewFields"
field_attr_string_redundant = "odd.check:FieldAttrStringRedundant"
field_attrs = "odd.check:FieldAttrs"
file_permissions = "odd.check:FilePermissions"
ir_cron_state_code = "odd.check:IrCronStateCode"
ir_model_access_no_group = "odd.check:IrModelAccessNoGroup"
legacy_import = "odd.check:LegacyImport"
manifest_filename = "odd.check:ManifestFilename"
manifest_keys = "odd.check:ManifestKeys"
missing_dependency = "odd.check:MissingDependency"
new_model_description = "odd.check:NewModelDescription"
new_model_no_ir_model_access = "odd.check:NewModelNoIrModelAccess"
noupdate = "odd.check:NoUpdate"
redundant_t_attf = "odd.check:RedundantTAttf"
relaxng = "odd.check:RelaxNG"
route_kwargs = "odd.check:RouteKwargs"
search_string = "odd.check:SearchString"
track_visibility_always = "odd.check:TrackVisibilityAlways"
tree_string = "odd.check:TreeString"
unittest_testcase_tagged = "odd.check:UnitTestTestCaseTagged"
